# JiraExplorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: config.cpp  config.h  datahub.cpp  datahub.h  error.cpp  error.h  jira_client.cpp  jira_client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  ticketsmodel.cpp  ticketsmodel.h
